# MIMO

./: .gitignore  .gitmessage.txt  README.md
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/mimo/android/: AuthViewModel.kt  BaseApplication.kt  FirstSettingFunnelsViewModel.kt  GoogleLocationViewModel.kt  MainActivity.kt  MimoApp.kt  QrCodeViewModel.kt
android/app/src/main/java/com/mimo/android/apis/: MainActivity.kt  interface.kt
android/app/src/main/java/com/mimo/android/components/: BackgroundImage.kt  Button.kt  FunnelInput.kt  HorizontalDivider.kt  HorizontalScroll.kt  Icon.kt  ScrollView.kt  TransparentCard.kt
android/app/src/main/java/com/mimo/android/examples/: ExampleLocationForegroundService.kt  ForegroundServiceSampleScreen.kt  (+1 more)
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
backend/: .env.example  Dockerfile  Jenkinsfile  Jenkinsfile.dev  Jenkinsfile.ops  build.gradle  docker-compose.yml
backend/src/main/java/com/ssafy/mimo/: MimoApplication.java
backend/src/main/java/com/ssafy/mimo/common/: BaseDeletableEntity.java  BaseDeviceEntity.java  BaseEntity.java  BaseUnregisterableEntity.java  DeviceDefaults.java  SleepLevel.java
backend/src/main/java/com/ssafy/mimo/config/: SwaggerConfig.java
backend/src/main/java/com/ssafy/mimo/exception/: CustomException.java  ErrorCode.java  ErrorResponse.java  ExceptionHandlerFilter.java  GlobalExceptionHandler.java
backend/src/main/java/com/ssafy/mimo/healthchecker/: HealthCheckerController.java
backend/src/main/resources/: application.properties  application.yml
deploy/db/dev/: docker-compose.yml
deploy/db_ops/: docker-compose.yml
deploy/jenkins/: .env.example  Dockerfile.agent  Dockerfile.dev  Dockerfile.master  Dockerfile.ops  docker-compose.yml
deploy/nginx/: .env.example  Dockerfile  docker-compose.yml  http.conf.template  stream.conf.template  switch.sh
deploy/redis/dev/: .env.example
deploy/redis/ops/: .env.example
deploy/redis_dev/: docker-compose.yml
deploy/redis_ops/: docker-compose.yml
embedded/: CMakeLists.txt  ble_test.cpp
embedded/curtain/: curtain.ino
embedded/hub/: CMakeLists.txt  att.c  ble.cpp  btio.c  client_test.cpp  common.cpp  gattrib.c  main.cpp  server_test.cpp  socket.cpp  uuid.c
embedded/hub/gattlib/: CMakeLists.txt
embedded/hub/gattlib/dbus/: CMakeLists.txt
embedded/hub/gattlib/read_write/: CMakeLists.txt  read_write.c  read_write.h
embedded/hub/includes/: ble.hpp  client_test.hpp  common.hpp  org-bluez-adaptater1.c  org-bluez-adaptater1.h  org-bluez-device1.c  org-bluez-device1.h  socket.hpp
embedded/hub/lib-bluez/: CMakeLists.txt
embedded/lamp/: lamp.ino
embedded/light/: light.ino
embedded/window/: window.ino
exec/: PortingManual.md  README.md  dump-mimo-202405192153.sql
(+245 files in other folders)
